---
source: tests/cli.rs
expression: buf
---
## testdata/tree/already_failing_doctests

```json
[
  {
    "package": "mutants-testdata-already-failing-doctests",
    "file": "src/lib.rs",
    "line": 9,
    "function": "takes_one_arg",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/already_failing_tests

```json
[
  {
    "package": "mutants-testdata-already-failing-tests",
    "file": "src/lib.rs",
    "line": 1,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/already_hangs

```json
[
  {
    "package": "cargo-mutants-testdata-already-hangs",
    "file": "src/lib.rs",
    "line": 8,
    "function": "infinite_loop",
    "return_type": "",
    "replacement": "()"
  }
]
```

## testdata/tree/cdylib

```json
[
  {
    "package": "cargo-mutants-testdata-cdylib",
    "file": "src/entry.rs",
    "line": 1,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/cfg_attr_mutants_skip

```json
[]
```

## testdata/tree/cfg_attr_test_skip

```json
[]
```

## testdata/tree/dependency

```json
[
  {
    "package": "cargo-mutants-testdata-dependency",
    "file": "src/lib.rs",
    "line": 1,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/everything_skipped

```json
[]
```

## testdata/tree/factorial

```json
[
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "line": 1,
    "function": "main",
    "return_type": "",
    "replacement": "()"
  },
  {
    "package": "cargo-mutants-testdata-factorial",
    "file": "src/bin/factorial.rs",
    "line": 7,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/hang_avoided_by_attr

```json
[
  {
    "package": "cargo-mutants-testdata-hang-avoided-by-attr",
    "file": "src/lib.rs",
    "line": 14,
    "function": "controlled_loop",
    "return_type": "",
    "replacement": "()"
  }
]
```

## testdata/tree/hang_when_mutated

```json
[
  {
    "package": "cargo-mutants-testdata-hang-when-mutated",
    "file": "src/lib.rs",
    "line": 12,
    "function": "should_stop",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "package": "cargo-mutants-testdata-hang-when-mutated",
    "file": "src/lib.rs",
    "line": 12,
    "function": "should_stop",
    "return_type": "-> bool",
    "replacement": "false"
  },
  {
    "package": "cargo-mutants-testdata-hang-when-mutated",
    "file": "src/lib.rs",
    "line": 25,
    "function": "controlled_loop",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/insta

```json
[
  {
    "package": "cargo-mutants-testdata-insta",
    "file": "src/lib.rs",
    "line": 1,
    "function": "say_hello",
    "return_type": "-> String",
    "replacement": "\"\".into()"
  },
  {
    "package": "cargo-mutants-testdata-insta",
    "file": "src/lib.rs",
    "line": 1,
    "function": "say_hello",
    "return_type": "-> String",
    "replacement": "\"xyzzy\".into()"
  }
]
```

## testdata/tree/integration_tests

```json
[
  {
    "package": "cargo-mutants-testdata-integration-tests",
    "file": "src/lib.rs",
    "line": 1,
    "function": "double",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/nightly_only

```json
[
  {
    "package": "nightly_only",
    "file": "src/main.rs",
    "line": 2,
    "function": "main",
    "return_type": "",
    "replacement": "()"
  }
]
```

## testdata/tree/override_dependency

```json
[
  {
    "package": "cargo-mutants-testdata-override-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "package": "cargo-mutants-testdata-override-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "false"
  }
]
```

## testdata/tree/patch_dependency

```json
[
  {
    "package": "cargo-mutants-testdata-patch-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "package": "cargo-mutants-testdata-patch-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "false"
  }
]
```

## testdata/tree/relative_dependency

```json
[
  {
    "package": "cargo-mutants-testdata-relative-dependency",
    "file": "src/lib.rs",
    "line": 5,
    "function": "double_factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/replace_dependency

```json
[
  {
    "package": "cargo-mutants-testdata-replace-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "package": "cargo-mutants-testdata-replace-dependency",
    "file": "src/lib.rs",
    "line": 6,
    "function": "is_even",
    "return_type": "-> bool",
    "replacement": "false"
  }
]
```

## testdata/tree/small_well_tested

```json
[
  {
    "package": "cargo-mutants-testdata-small-well-tested",
    "file": "src/lib.rs",
    "line": 4,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/strict_warnings

```json
[
  {
    "package": "cargo-mutants-testdata-strict-warnings",
    "file": "src/lib.rs",
    "line": 5,
    "function": "some_fn",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/struct_with_no_default

```json
[
  {
    "package": "cargo-mutants-testdata-struct-with-no-default",
    "file": "src/lib.rs",
    "line": 11,
    "function": "make_an_s",
    "return_type": "-> S",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/typecheck_fails

```json
[
  {
    "package": "mutants-testdata-typecheck-fails",
    "file": "src/lib.rs",
    "line": 5,
    "function": "try_value_coercion",
    "return_type": "-> String",
    "replacement": "\"\".into()"
  },
  {
    "package": "mutants-testdata-typecheck-fails",
    "file": "src/lib.rs",
    "line": 5,
    "function": "try_value_coercion",
    "return_type": "-> String",
    "replacement": "\"xyzzy\".into()"
  }
]
```

## testdata/tree/well_tested

```json
[
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/inside_mod.rs",
    "line": 3,
    "function": "outer::inner::name",
    "return_type": "-> &'static str",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/methods.rs",
    "line": 16,
    "function": "Foo::double",
    "return_type": "",
    "replacement": "()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/methods.rs",
    "line": 22,
    "function": "<impl Display for Foo>::fmt",
    "return_type": "-> fmt::Result",
    "replacement": "Ok(Default::default())"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/methods.rs",
    "line": 28,
    "function": "<impl Debug for &Foo>::fmt",
    "return_type": "-> fmt::Result",
    "replacement": "Ok(Default::default())"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/nested_function.rs",
    "line": 1,
    "function": "has_nested",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/nested_function.rs",
    "line": 2,
    "function": "has_nested::inner",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/result.rs",
    "line": 5,
    "function": "simple_result",
    "return_type": "-> Result<&'static str, ()>",
    "replacement": "Ok(Default::default())"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/result.rs",
    "line": 9,
    "function": "error_if_negative",
    "return_type": "-> Result<(), ()>",
    "replacement": "Ok(Default::default())"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 7,
    "function": "returns_unit",
    "return_type": "",
    "replacement": "()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 12,
    "function": "returns_42u32",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 17,
    "function": "divisible_by_three",
    "return_type": "-> bool",
    "replacement": "true"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 17,
    "function": "divisible_by_three",
    "return_type": "-> bool",
    "replacement": "false"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 26,
    "function": "double_string",
    "return_type": "-> String",
    "replacement": "\"\".into()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/simple_fns.rs",
    "line": 26,
    "function": "double_string",
    "return_type": "-> String",
    "replacement": "\"xyzzy\".into()"
  },
  {
    "package": "cargo-mutants-testdata-well-tested",
    "file": "src/struct_with_lifetime.rs",
    "line": 14,
    "function": "Lex<'buf>::buf_len",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/with_child_directories

```json
[
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/methods.rs",
    "line": 1,
    "function": "double",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/module_methods.rs",
    "line": 1,
    "function": "double",
    "return_type": "-> usize",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/utils/inside_mod.rs",
    "line": 3,
    "function": "outer::inner::name",
    "return_type": "-> &'static str",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/utils/nested_function.rs",
    "line": 1,
    "function": "has_nested",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/utils/nested_function.rs",
    "line": 2,
    "function": "has_nested::inner",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/utils/sub_utils/subutils_nested_function.rs",
    "line": 1,
    "function": "has_nested",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "cargo-mutants-testdata-with-child-directories",
    "file": "src/module/utils/sub_utils/subutils_nested_function.rs",
    "line": 2,
    "function": "has_nested::inner",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  }
]
```

## testdata/tree/workspace

```json
[
  {
    "package": "cargo_mutants_testdata_workspace_utils",
    "file": "utils/src/lib.rs",
    "line": 1,
    "function": "triple",
    "return_type": "-> i32",
    "replacement": "Default::default()"
  },
  {
    "package": "main",
    "file": "main/src/main.rs",
    "line": 11,
    "function": "factorial",
    "return_type": "-> u32",
    "replacement": "Default::default()"
  },
  {
    "package": "main2",
    "file": "main2/src/main.rs",
    "line": 9,
    "function": "triple_3",
    "return_type": "-> i32",
    "replacement": "Default::default()"
  }
]
```


